--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "jshint . || true",
     "dev": "ts-node-dev --respawn --transpileOnly app/server/server.ts",
     "start": "gulp app:build",
-    "test": "NODE_ENV=test ./node_modules/.bin/_mocha --require source-map-support/register --timeout 35000 build/test/**/**/**/**/*.test.js"
+    "test": "NODE_ENV=test ./node_modules/.bin/_mocha --compilers ts:ts-node/register app/test/**/**/**/**/*.test.ts"
   },
   "dependencies": {
     "async": "2.6.1",
@@ -26,6 +26,7 @@
     "everyauth": "0.4.9",
     "faker": "4.1.0",
     "fb": "2.0.0",
+
     "gulp": "3.9.1",
     "gulp-add-src": "1.0.0",
     "gulp-angular-templatecache": "2.2.5",
@@ -61,6 +62,7 @@
     "loopback-component-passport": "3.10.0",
     "loopback-connector-mongodb": "3.9.2",
     "loopback-ds-timestamp-mixin": "3.4.1",
+
     "minimist": "1.2.0",
     "moment": "2.22.2",
     "multer": "1.4.1",
@@ -119,6 +121,7 @@
     "@types/validator": "9.4.3",
     "@types/winston": "2.4.4",
     "@types/async": "2.0.50",
+
     "chai": "4.2.0",
     "form-data": "2.3.3",
     "jshint": "2.9.6",
