--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "classic",
-    "removeComments": true,
-    "noImplicitAny": false,
-    "experimentalDecorators": true,
-    "declaration": true,
-    "preserveConstEnums": true,
-    "noUnusedLocals": true,
-    "allowSyntheticDefaultImports": true,
-    // "noUnusedParameters": true
-    "types": [
-      "mocha-typescript"
+    /* Basic Options */
+    "target": "es5"
+    /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
+    "module": "commonjs"
+    /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    "lib": [
+      "es2015"
     ],
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
-  },
-  "exclude": [
-    "build",
-    "node_modules",
-    "**/*.spec.ts"
-  ],
-  "include": [
-    "app/types/loopback-crud.d.ts"
-  ]
+    /* Experimental Options */
+    "experimentalDecorators": true
+    /* Enables experimental support for ES7 decorators. */
+    // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+  }
 }
