--- a/package.json
+++ b/package.json
@@ -10,22 +10,17 @@
     "test": "NODE_ENV=test ./node_modules/.bin/_mocha --compilers ts:ts-node/register app/test/**/**/**/**/*.test.ts"
   },
   "dependencies": {
-    "async": "2.6.1",
     "bluebird": "3.5.3",
     "boilerpipe": "0.0.7",
     "chalk": "2.4.1",
-    "cheerio": "1.0.0-rc.2",
     "compression": "1.7.3",
     "cookie-parser": "1.4.3",
     "cors": "2.8.5",
     "cron": "1.5.0",
-    "debug": "4.1.0",
     "del": "3.0.0",
     "errorhandler": "1.5.0",
-    "es6-promise": "4.2.5",
     "faker": "4.1.0",
     "fb": "2.0.0",
-
     "gulp": "3.9.1",
     "gulp-add-src": "1.0.0",
     "gulp-angular-templatecache": "2.2.5",
@@ -45,11 +40,8 @@
     "gulp-sass": "4.0.2",
     "gulp-shell": "0.6.5",
     "gulp-sourcemaps": "2.6.4",
-    "gulp-tslint": "8.1.3",
-    "gulp-typescript": "5.0.0-alpha.3",
     "gulp-uglify": "3.0.1",
     "gulp-util": "3.0.8",
-    
     "he": "1.2.0",
     "helmet": "3.15.0",
     "html-to-text": "4.0.0",
@@ -61,7 +53,6 @@
     "loopback-component-passport": "3.10.0",
     "loopback-connector-mongodb": "3.9.2",
     "loopback-ds-timestamp-mixin": "3.4.1",
-
     "minimist": "1.2.0",
     "moment": "2.22.2",
     "multer": "1.4.1",
@@ -71,10 +62,11 @@
     "passport-google-oauth": "1.0.0",
     "pkgcloud": "1.5.0",
     "psl": "1.1.29",
+    "pump": "3.0.0",
     "randomstring": "1.1.5",
     "request": "2.88.0",
+    "run-sequence": "2.2.1",
     "sitemap": "2.1.0",
-    "sleep": "5.2.3",
     "slug": "0.9.2",
     "source-map-support": "0.5.9",
     "strong-error-handler": "3.2.0",
@@ -91,12 +83,10 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.1",
-    "@types/sleep": "0.0.7",
     "@types/bluebird": "3.5.24",
     "@types/chai": "4.1.7",
     "@types/cheerio": "0.22.10",
     "@types/cron": "1.3.0",
-    "@types/es6-promise": "3.3.0",
     "@types/express": "4.16.0",
     "@types/faker": "4.1.4",
     "@types/fb": "0.0.23",
@@ -113,13 +103,9 @@
     "@types/sinon": "5.0.7",
     "@types/slug": "0.9.0",
     "@types/supertest": "2.0.6",
-    "@types/twitter": "0.0.28",
     "@types/validator": "9.4.3",
     "@types/winston": "2.4.4",
-    "@types/async": "2.0.50",
-
     "chai": "4.2.0",
-    "form-data": "2.3.3",
     "jshint": "2.9.6",
     "mocha": "5.2.0",
     "mocha-typescript": "1.1.17",
