--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "jshint . || true",
     "dev": "ts-node-dev --respawn --transpileOnly app/server/server.ts",
-    "start": "gulp app:build",
+    "start": "node node_modules/ts-node/dist/bin.js app/server/server.ts",
     "test": "NODE_ENV=test ./node_modules/.bin/_mocha --compilers ts:ts-node/register app/test/**/**/**/**/*.test.ts"
   },
   "dependencies": {
